完善Makefie,增加一些功能文件

--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -6,18 +6,17 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-include $(TOP_DIR)/kernel/irq/Makefile
-include $(TOP_DIR)/kernel/printk/Makefile
+FILE_DIR = $(TOP_DIR)/arch/arm
 
-FILE_DIR = $(TOP_DIR)/kernel
+TEMP_C_SCRS = cpu_c.c
 
-TEMP_C_SCRS = task.c
-
-TEMP_ASM_SCRS =
+TEMP_ASM_SCRS = cpu_s.S
 
 OBJS += $(TEMP_C_SCRS:%.c:$(TOP_DIR)/debug/objs/%.o)
 OBJS += $(TEMP_ASM_SCRS:%.s:$(TOP_DIR)/debug/objs/%.o)
 
 C_SCRS += $(TEMP_C_SCRS:%:$(FILE_DIR)/%)
 ASM_SCRS += $(TEMP_ASM_SCRS:%:$(FILE_DIR)/%)
+
+
 
