--- a/kernel/irq/Makefile
+++ b/kernel/irq/Makefile
@@ -6,12 +6,9 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-include $(TOP_DIR)/kernel/irq/Makefile
-include $(TOP_DIR)/kernel/printk/Makefile
+FILE_DIR = $(TOP_DIR)/kernel/irq
 
-FILE_DIR = $(TOP_DIR)/kernel
-
-TEMP_C_SCRS = task.c
+TEMP_C_SCRS = irq.c
 
 TEMP_ASM_SCRS =
 
