--- a/arch/arm/cpu/Makefile
+++ b/arch/arm/cpu/Makefile
@@ -6,12 +6,16 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/test
+DEBUG_DIR += $(TOP_DIR)/debug/arch/arm/cpu
 
-C_SRCS += $(TOP_DIR)/test/delay.c
-C_SRCS += $(TOP_DIR)/test/led.c
-#C_SRCS += $(TOP_DIR)/test/usart.c
+include $(TOP_DIR)/arch/arm/cpu/m3/Makefile
 
-ASM_SRCS += 
+C_SRCS += 
 
-INC_DIR += -I $(TOP_DIR)/test
+ASM_SRCS +=
+ASM_SRCS +=
+
+INC_DIR +=
+
+
+
