--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -12,6 +12,7 @@ include $(TOP_DIR)/kernel/irq/Makefile
 include $(TOP_DIR)/kernel/printk/Makefile
 
 C_SRCS += $(TOP_DIR)/kernel/task.c
+C_SRCS += $(TOP_DIR)/kernel/kernel.c
 
 ASM_SRCS +=
 
