添加调度器

--- a/arch/arm/cpu/m3/Makefile
+++ b/arch/arm/cpu/m3/Makefile
@@ -9,6 +9,7 @@
 DEBUG_DIR += $(TOP_DIR)/debug/arch/arm/cpu/m3
 
 C_SRCS += $(TOP_DIR)/arch/arm/cpu/m3/cpu_c.c
+C_SRCS += $(TOP_DIR)/arch/arm/cpu/m3/asm_irq.c
 
 ASM_SRCS += $(TOP_DIR)/arch/arm/cpu/m3/cpu_s.S
 
