--- a/arch/arm/board/zj_v3/Makefile
+++ b/arch/arm/board/zj_v3/Makefile
@@ -15,6 +15,7 @@ C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_irq.c
 C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_gpio.c
 C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/board_config.c
 C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/board_init.c
+C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/console.c
 
 ASM_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/startup_stm32f10x_hd.S
 
