--- a/lib/Makefile
+++ b/lib/Makefile
@@ -10,5 +10,6 @@ DEBUG_DIR += $(TOP_DIR)/debug/lib
 
 C_SRCS += $(TOP_DIR)/lib/string.c
 C_SRCS += $(TOP_DIR)/lib/vsprintf.c
+C_SRCS += $(TOP_DIR)/lib/fifo_buf.c
 
 ASM_SRCS +=
