--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -16,6 +16,7 @@ C_SRCS += $(TOP_DIR)/kernel/clk.c
 C_SRCS += $(TOP_DIR)/kernel/sch.c
 C_SRCS += $(TOP_DIR)/kernel/kernel.c
 C_SRCS += $(TOP_DIR)/kernel/pid.c
+C_SRCS += $(TOP_DIR)/kernel/timer.c
 
 ASM_SRCS +=
 
