增强调试功能

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -18,7 +18,7 @@ C_SRCS += $(TOP_DIR)/kernel/kernel.c
 C_SRCS += $(TOP_DIR)/kernel/pid.c
 C_SRCS += $(TOP_DIR)/kernel/timer.c
 C_SRCS += $(TOP_DIR)/kernel/mutex.c
-C_SRCS += $(TOP_DIR)/kernel/ipc.c
+C_SRCS += $(TOP_DIR)/kernel/msg_queue.c
 
 ASM_SRCS +=
 
