1、添加控制台功能 2、添加一些命令 3、添加log控制宏

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -11,6 +11,7 @@ DEBUG_DIR += $(TOP_DIR)/debug/kernel
 include $(TOP_DIR)/kernel/irq/Makefile
 include $(TOP_DIR)/kernel/printk/Makefile
 include $(TOP_DIR)/kernel/base/Makefile
+include $(TOP_DIR)/kernel/cmd/Makefile
 
 C_SRCS += $(TOP_DIR)/kernel/task.c
 C_SRCS += $(TOP_DIR)/kernel/clk.c
@@ -23,6 +24,7 @@ C_SRCS += $(TOP_DIR)/kernel/msg_queue.c
 C_SRCS += $(TOP_DIR)/kernel/delay.c
 C_SRCS += $(TOP_DIR)/kernel/cpu.c
 C_SRCS += $(TOP_DIR)/kernel/sem.c
+C_SRCS += $(TOP_DIR)/kernel/console.c
 
 ASM_SRCS +=
 
