完成usb驱动以及usb-hid驱动的添加

--- a/arch/arm/board/zj_v3/Makefile
+++ b/arch/arm/board/zj_v3/Makefile
@@ -11,6 +11,7 @@ DEFS += -DSTM32F10X_HD -DUSE_STDPERIPH_DRIVER
 DEBUG_DIR += $(TOP_DIR)/debug/arch/arm/board/zj_v3
 
 include $(TOP_DIR)/arch/arm/board/zj_v3/drivers/Makefile
+include $(TOP_DIR)/arch/arm/board/zj_v3/usb/Makefile
 
 C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_dma.c
 C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_uart.c
@@ -20,6 +21,7 @@ C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_gpio.c
 C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/board_config.c
 C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/board_init.c
 C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_console.c
+C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_usb.c
 
 #C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/system_stm32f10x.c
 
