--- a/app/Makefile
+++ b/app/Makefile
@@ -6,10 +6,6 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/app
-
-C_SRCS += $(TOP_DIR)/app/test_app.c
-
-ASM_SRCS +=
+obj-y = test_app.o
 
 
