--- a/arch/Makefile
+++ b/arch/Makefile
@@ -6,6 +6,4 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/arch
-
-include $(TOP_DIR)/arch/$(ARCH)/Makefile
+dir-y = $(ARCH)
