--- a/kernel/printk/Makefile
+++ b/kernel/printk/Makefile
@@ -6,11 +6,7 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/kernel/printk
-
-C_SRCS += $(TOP_DIR)/kernel/printk/printk.c
-C_SRCS += $(TOP_DIR)/kernel/printk/log.c
-
-ASM_SRCS +=
+obj-y = log.o
+obj-y += printk.o
 
 
