--- a/arch/arm/Makefile
+++ b/arch/arm/Makefile
@@ -6,20 +6,9 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/arch/arm
-
-include $(TOP_DIR)/arch/arm/board/Makefile
-include $(TOP_DIR)/arch/arm/boot/Makefile
-include $(TOP_DIR)/arch/arm/cmsis/Makefile
-include $(TOP_DIR)/arch/arm/cpu/Makefile
-include $(TOP_DIR)/arch/arm/config/Makefile
-
-C_SRCS += 
-
-ASM_SRCS += 
-ASM_SRCS += 
-
-INC_DIR += -I $(TOP_DIR)/arch/arm/include
-
-
+dir-y = board
+dir-y += boot
+dir-y += cmsis
+dir-y += cpu
+dir-y += config
 
