--- a/arch/arm/board/Makefile
+++ b/arch/arm/board/Makefile
@@ -6,16 +6,7 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/arch/arm/board
-
-include $(TOP_DIR)/arch/arm/board/$(BOARD)/Makefile
-
-C_SRCS += 
-
-ASM_SRCS += 
-ASM_SRCS += 
-
-INC_DIR += -I $(TOP_DIR)/arch/arm/board/include
+dir-y = $(BOARD)
 
 
 
