--- a/arch/arm/board/zj_v3/Makefile
+++ b/arch/arm/board/zj_v3/Makefile
@@ -6,28 +6,20 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEFS += -DSTM32F10X_HD -DUSE_STDPERIPH_DRIVER
+dir-y = drivers
+dir-y += usb
 
-DEBUG_DIR += $(TOP_DIR)/debug/arch/arm/board/zj_v3
+obj-y = arch_dma.o
+obj-y += arch_uart.o
+obj-y += arch_clk.o
+obj-y += arch_irq.o
+obj-y += arch_gpio.o
+obj-y += board_config.o
+obj-y += board_init.o
+obj-y += arch_console.o
+obj-y += arch_usb.o
 
-include $(TOP_DIR)/arch/arm/board/zj_v3/drivers/Makefile
-include $(TOP_DIR)/arch/arm/board/zj_v3/usb/Makefile
 
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_dma.c
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_uart.c
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_clk.c
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_irq.c
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_gpio.c
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/board_config.c
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/board_init.c
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_console.c
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/arch_usb.c
-
-#C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/system_stm32f10x.c
-
-ASM_SRCS += 
-
-INC_DIR += -I $(TOP_DIR)/arch/arm/board/zj_v3/include
 
 
 
