--- a/arch/arm/board/zj_v3/drivers/Makefile
+++ b/arch/arm/board/zj_v3/drivers/Makefile
@@ -6,12 +6,5 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/arch/arm/board/zj_v3/drivers
+dir-y = src
 
-include $(TOP_DIR)/arch/arm/board/zj_v3/drivers/src/Makefile
-
-C_SRCS += 
-
-ASM_SRCS += 
-
-INC_DIR += -I $(TOP_DIR)/arch/arm/board/zj_v3/drivers/inc
