--- a/arch/arm/board/zj_v3/usb/Makefile
+++ b/arch/arm/board/zj_v3/usb/Makefile
@@ -6,15 +6,10 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/arch/arm/board/zj_v3/usb
+obj-y = stm32f1xx_hal_pcd_ex.o
+obj-y += stm32f1xx_hal_pcd.o
+obj-y += stm32f1xx_ll_usb.o
 
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/usb/stm32f1xx_hal_pcd_ex.c
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/usb/stm32f1xx_hal_pcd.c
-C_SRCS += $(TOP_DIR)/arch/arm/board/zj_v3/usb/stm32f1xx_ll_usb.c
-
-ASM_SRCS += 
-
-INC_DIR += -I $(TOP_DIR)/arch/arm/board/zj_v3/usb
 
 
 
