--- a/arch/arm/boot/Makefile
+++ b/arch/arm/boot/Makefile
@@ -6,12 +6,4 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/arch/arm/boot
-
-C_SRCS += $(TOP_DIR)/arch/arm/boot/system_stm32f10x.c
-
-ASM_SRCS += 
-
-DEFS += -D STM32F10X_HD -D USE_STDPERIPH_DRIVER
-
-INC_DIR += -I $(TOP_DIR)/arch/arm/boot/include
+obj-y = system_stm32f10x.o
