--- a/arch/arm/cpu/Makefile
+++ b/arch/arm/cpu/Makefile
@@ -6,16 +6,7 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/arch/arm/cpu
-
-include $(TOP_DIR)/arch/arm/cpu/m3/Makefile
-
-C_SRCS += 
-
-ASM_SRCS +=
-ASM_SRCS +=
-
-INC_DIR +=
+dir-y = m3
 
 
 
