--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -6,12 +6,4 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/drivers
-
-include $(TOP_DIR)/drivers/usb/Makefile
-
-C_SRCS += 
-
-ASM_SRCS += 
-
-INC_DIR += 
+dir-y = usb 
