--- a/drivers/usb/Makefile
+++ b/drivers/usb/Makefile
@@ -6,12 +6,5 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-DEBUG_DIR += $(TOP_DIR)/debug/drivers/usb/
+dir-y = device
 
-include $(TOP_DIR)/drivers/usb/device/Makefile
-
-C_SRCS += 
-
-ASM_SRCS += 
-
-INC_DIR +=
