--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "usb_device.h": "c"
+        "usb_device.h": "c",
+        "err.h": "c",
+        "typeinfo": "c"
     }
 }
