修复make多线程出错问题

--- a/arch/arm/board/keyboard/Makefile.config
+++ b/arch/arm/board/keyboard/Makefile.config
@@ -9,6 +9,6 @@
 FP_FLAGS	= -mfloat-abi=hard -mfpu=fpv4-sp-d16
 ARCH_FLAGS	= -mthumb -mcpu=cortex-m4
 OOCD_TARGET	:= stm32f4x
-OOCDFLAGS := -f $(project-dir)/arch/$(ARCH)/board/$(BOARD)/openocd.cfg
-LDSCRIPT += $(project-dir)/arch/$(ARCH)/board/$(BOARD)/wk_kernel.ld
+OOCDFLAGS := -f arch/$(ARCH)/board/$(BOARD)/openocd.cfg
+LDSCRIPT += arch/$(ARCH)/board/$(BOARD)/wk_kernel.ld
 DEFINES += -DSTM32F401xx -DUSE_STDPERIPH_DRIVER -D__VFP_FP__
