--- a/arch/arm/board/zj_v3/Makefile.config
+++ b/arch/arm/board/zj_v3/Makefile.config
@@ -9,6 +9,6 @@
 FP_FLAGS	= -msoft-float
 ARCH_FLAGS	= -mthumb -mcpu=cortex-m3
 OOCD_TARGET	:= stm32f1x
-OOCDFLAGS := -f $(project-dir)/arch/$(ARCH)/board/$(BOARD)/openocd.cfg
-LDSCRIPT += $(project-dir)/arch/$(ARCH)/board/$(BOARD)/wk_kernel.ld
+OOCDFLAGS := -f arch/$(ARCH)/board/$(BOARD)/openocd.cfg
+LDSCRIPT += arch/$(ARCH)/board/$(BOARD)/wk_kernel.ld
 DEFINES += -DSTM32F10X_HD -DUSE_STDPERIPH_DRIVER
