--- a/scripts/Makefile.config
+++ b/scripts/Makefile.config
@@ -14,7 +14,7 @@ RM := rm -rf
 PREFIX		:= arm-none-eabi-
 CC		    := $(PREFIX)gcc
 CXX		    := $(PREFIX)g++
-LD		    := $(PREFIX)gcc
+LD		    := $(PREFIX)ld
 AR		    := $(PREFIX)ar
 AS		    := $(PREFIX)as
 OBJCOPY		:= $(PREFIX)objcopy
@@ -24,28 +24,29 @@ GDB		    := $(PREFIX)gdb
 
 OPTSRC = -O2
 
-TARGET_HEX = $(project-dir)/$(out-dir)/$(TARGET).hex
-TARGET_SIZE = $(project-dir)/$(out-dir)/$(TARGET).size
-TARGET_BIN = $(project-dir)/$(out-dir)/$(TARGET).bin
-TARGET_ELF = $(project-dir)/$(out-dir)/$(TARGET).elf
-TARGET_LIST = $(project-dir)/$(out-dir)/$(TARGET).list
-TARGET_MAP = $(project-dir)/$(out-dir)/$(TARGET).map
+TARGET_HEX = $(out-dir)/$(TARGET).hex
+TARGET_SIZE = $(out-dir)/$(TARGET).size
+TARGET_BIN = $(out-dir)/$(TARGET).bin
+TARGET_ELF = $(out-dir)/$(TARGET).elf
+TARGET_LIST = $(out-dir)/$(TARGET).list
+TARGET_MAP = $(out-dir)/$(TARGET).map
 
 #头文件文件目录
-INC_DIR := -I$(project-dir)/include
-INC_DIR += -I$(project-dir)/arch/$(ARCH)/include
-INC_DIR += -I$(project-dir)/arch/$(ARCH)/board/include
-INC_DIR += -I$(project-dir)/arch/$(ARCH)/board/$(BOARD)/include
-INC_DIR += -I$(project-dir)/arch/$(ARCH)/board/$(BOARD)/drivers/inc
-INC_DIR += -I$(project-dir)/arch/$(ARCH)/board/$(BOARD)/usb
-INC_DIR += -I$(project-dir)/arch/$(ARCH)/board/cpu/m3
+INC_DIR := -Iinclude
+INC_DIR += -Iarch/$(ARCH)/include
+INC_DIR += -Iarch/$(ARCH)/board/include
+INC_DIR += -Iarch/$(ARCH)/board/$(BOARD)/include
+INC_DIR += -Iarch/$(ARCH)/board/$(BOARD)/drivers/inc
+INC_DIR += -Iarch/$(ARCH)/board/$(BOARD)/usb
+INC_DIR += -Iarch/$(ARCH)/board/cpu/$(CPU_TYPE)
 
 CCFLAGS = $(ARCH_FLAGS)
 CCFLAGS += $(FP_FLAGS)
 CCFLAGS += $(OPTSRC)
 CCFLAGS += -fmessage-length=0 -fsigned-char -ffunction-sections
 CCFLAGS += -fdata-sections -ffreestanding -fno-move-loop-invariants
-CCFLAGS += -Wall -Wextra -Werror -g3 
+CCFLAGS += -Wall -Wextra -Werror -g3
+CCFLAGS += -Wa,-mimplicit-it=thumb
 CCFLAGS += -std=gnu11 -MMD -MP -MF"$(@:%.o=%.d)" -MT"$(@)" -c
 CCFLAGS += $(INC_DIR)
 CCFLAGS += $(DEFINES)
@@ -56,6 +57,7 @@ ASFLAGS += $(OPTSRC)
 ASFLAGS += -fmessage-length=0 -fsigned-char -ffunction-sections
 ASFLAGS += -fdata-sections -ffreestanding -fno-move-loop-invariants
 ASFLAGS += -Wall -Wextra -Werror -g3 -x assembler-with-cpp
+ASFLAGS += -Wa,-mimplicit-it=thumb
 ASFLAGS += -MMD -MP -MF"$(@:%.o=%.d)" -MT"$(@)" -c
 ASFLAGS += $(INC_DIR)
 ASFLAGS += $(DEFINES)
