添加按键测试驱动

--- a/drivers/key/Makefile
+++ b/drivers/key/Makefile
@@ -6,6 +6,4 @@
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-dir-y = usb
-dir-y += i2c
-dir-y += key
+obj-y = key-keyboard.o
