完成键盘led驱动

--- a/scripts/Makefile.config
+++ b/scripts/Makefile.config
@@ -39,6 +39,7 @@ INC_DIR += -Iarch/$(ARCH)/board/$(BOARD)/include
 INC_DIR += -Iarch/$(ARCH)/board/$(BOARD)/drivers/inc
 INC_DIR += -Iarch/$(ARCH)/board/$(BOARD)/usb
 INC_DIR += -Iarch/$(ARCH)/board/cpu/$(CPU_TYPE)
+INC_DIR += -Iapp/keyboard
 
 CCFLAGS = $(ARCH_FLAGS)
 CCFLAGS += $(FP_FLAGS)
