--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "stm32f4xx_hal_def.h": "c",
         "stm32f4xx_hal_pcd.h": "c",
         "stm32f1xx_ll_usb.h": "c",
-        "stm32f1xx_hal_pcd.h": "c"
+        "stm32f1xx_hal_pcd.h": "c",
+        "init.h": "c"
     }
 }
