--- a/app/keyboard/Makefile
+++ b/app/keyboard/Makefile
@@ -1,13 +1,11 @@
 ##############################################
-# Copyright (C) 2018 胡启航<Hu Qihang>
+# Copyright (C) 2019 胡启航<Hu Qihang>
 #
 # Author: wkcs
 # 
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-obj-y = test_app.o
-
-dir-y = keyboard
+obj-y = key_led.o
 
 
