修复编译出错时不退出的bug

--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -28,9 +28,9 @@ ifndef $(TARGET)
     TARGET := built-in.o
 endif
 
-.PHONY: built-in.o obj-done
+.PHONY: built-in.o $(dir-y)
 
-built-in.o:obj-done
+built-in.o:$(dir-y) $(obj-dir) $(objs-all) $(obj-all)
 	$(Q)if [ -n "$(objs-all)" ] || [ -n "$(obj-all)" ] || \
 		[ -n "$(foreach dir-tmp,$(obj-dir), $(wildcard $(dir-tmp)/built-in.o))" ]; then \
 		echo "LD       $(TARGET)"; \
@@ -38,12 +38,10 @@ built-in.o:obj-done
 			$(foreach dir-tmp,$(obj-dir),$(wildcard $(dir-tmp)/built-in.o)); \
 	fi
 
-obj-done:$(objs-all) $(obj-all) $(obj-dir)
-	$(Q)for dir_in in $(dir-y); do \
-        $(MAKE) $(N) -f scripts/Makefile.build dir=$(dir)/"$$dir_in" \
+$(dir-y): $(obj-dir)
+	$(Q)$(MAKE) $(N) -f scripts/Makefile.build dir=$(dir)/$@ \
 		out-dir=$(out-dir) Q=$(Q) N=$(N) ARCH=$(ARCH) BOARD=$(BOARD) \
-		TARGET=built-in.o built-in.o; \
-    done
+		TARGET=built-in.o built-in.o;
 
 defs-all := $(objs-all:%.o=%.d)
 defs-all += $(obj-all:%.o=%.d)
