--- a/scripts/Makefile.config
+++ b/scripts/Makefile.config
@@ -22,6 +22,8 @@ OBJDUMP		:= $(PREFIX)objdump
 SIZE        := $(PREFIX)size
 GDB		    := $(PREFIX)gdb
 
+PYTHON := python
+
 OPTSRC = -O2
 
 TARGET_HEX = $(out-dir)/$(TARGET).hex
@@ -30,6 +32,7 @@ TARGET_BIN = $(out-dir)/$(TARGET).bin
 TARGET_ELF = $(out-dir)/$(TARGET).elf
 TARGET_LIST = $(out-dir)/$(TARGET).list
 TARGET_MAP = $(out-dir)/$(TARGET).map
+TARGET_IMG = $(out-dir)/$(TARGET).img
 
 #头文件文件目录
 INC_DIR := -Iinclude
