--- a/app/keyboard/com/Makefile
+++ b/app/keyboard/com/Makefile
@@ -1,14 +1,13 @@
 ##############################################
-# Copyright (C) 2018 胡启航<Hu Qihang>
+# Copyright (C) 2019 胡启航<Hu Qihang>
 #
 # Author: wkcs
 # 
 # Email: hqh2030@gmail.com, huqihan@live.com
 ##############################################
 
-dir-y = board
-dir-y += boot
-dir-y += cpu
-dir-y += kernel
+obj-y = com.o
+obj-y += com_updata.o
+obj-y += com_version.o
 
 
