优化按键上报

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "mutex.h": "c",
         "mm.h": "c",
         "sch.h": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "cstdint": "cpp"
     }
 }
